Ajuste botão Aplicar(preventDefault)

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <form name="formConsult">
             <p class="search-container">
                 <input type="search" id="searchID" placeholder="Pesquisar" name="search" />
-                <button type="submit" id="button" onclick="searchMovie(null);"> Aplicar </button>
+                <button type="submit" id="button"> Aplicar </button>
             </p>
             <table id="table" class="table table-responsive">
                 <thead> 
